# seed_airflow

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml
ci_cd/ci/: ci.env
src/: .flake8  airflow.cfg  conftest.py  dodo.py  entrypoint.sh  pip.conf  pyproject.toml  requirements.txt  setup.py  webserver_config.py
src/clients/: models.py  s3_client.py
src/clients/models/: __init__.py  delete.py  list_v2.py  shared.py
src/dags/: empty.py  example.py
src/dags/empty/: __init__.py  bash_commands.py  python_callables.py
src/dags/example/: __init__.py  python_callables.py
src/dags/tests/: connection_tests.py  default_tests.py  fixtures.py  functions.py  iceberg_tests.py  ignored.py  ignored_warnings.py  variable_tests.py
src/dags/tests/dag/: empty_tests.py  example_tests.py
