[tool.ruff]
cache-dir = "/tmp/.ruff_cache"
[tool.ruff.lint]
select = [
    "F", "E", "W", "C90",
    "N", "UP", "YTT", "ASYNC",
    "TRIO", "BLE", "FBT", "B",
    "A", "COM", "C4", "DTZ",
    "T10", "DJ", "EM", "EXE",
    "FA", "ISC", "ICN", "G",
    "INP", "PIE", "T20",
    "PYI", "PT", "RSE", "RET",
    "SLF", "SLOT", "SIM",
    "TID", "TCH", "INT",
    "PTH", "TD", "FIX", "ERA",
    "PD", "PGH", "PL", "TRY",
    "NPY", "AIR", "PERF",
    "LOG", "RUF",
    # "ANN", "S", "CPY", "Q"
    # "ARG", "FLY", "FURB"
]

ignore = [
    "UP037", "COM819", "FA102",
    "PT013", "PT004", "TID252",
    "TCH002", "TCH001",
    "PLR2004", "RUF100",
    # should re-check
#    "PTH123",
]
exclude = [
    "*/migrations/*",
]

[tool.ruff.lint.mccabe]
max-complexity = 2

[tool.ruff.lint.pycodestyle]
max-line-length = 69

[tool.mypy]
python_version = 3.12
ignore_missing_imports = true
disable_error_code = "valid-type"
cache_dir = "/tmp/.mypy_cache"

[tool.flake8]
ignore = "C819,PT013"

max-line-length = 69
max-doc-length = 69
max-complexity = 2
show-source = true
statistics = true
jobs = 4

max-cognitive-complexity = 2

[tool.pytest.ini_options]
python_files = "*_tests.py"
addopts = "--color=yes"
cache_dir = "/tmp/.pytest_cache"
timeout = 4

[tool.coverage.run]
omit = [
    "webserver_config.py", "dodo.py",
]
data_file = "/tmp/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == '__main__':",
]

[tool.doit]
dep_file = "/tmp/.doit.db"

# I hate black formatter

[tool.poetry]
name = "seed"
version = "0.1.0"
description = "seed"
authors = [
    "Nursultan Kassym <nursultan.kasym8@gmail.com>",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ipython = "^8.25.0"
wheel = "^0.43.0"
orjson = "^3.10.3"
polars = {extras = ["fsspec", "pyarrow"], version = "^0.20.28"}

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.8"
flake8 = "^7.0.0"
flake8-blind-except = "^0.2.1"
flake8-broken-line = "^1.0.0"
flake8-bugbear = "^24.4.26"
flake8-builtins = "^2.5.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^4.0.0"
flake8-comprehensions = "^3.14.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.5.0"
flake8-executable = "^2.1.3"
flake8-functions = "^0.0.8"
flake8-logging-format = "^0.9.0"
flake8-multiline-containers = "^0.0.19"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^2.1.0"
flake8-pie = "^0.16.0"
flake8-print = "^5.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-pyproject = "^1.2.3"
flake8-pytest-style = "^2.0.0"
flake8-return = "^1.2.0"
flake8-simplify = "^0.21.0"
flake8-string-format = "^0.3.0"
flake8-SQL = "^0.4.1"
flake8-variables-names = "^0.0.6"
pep8-naming = "^0.14.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-forked = "^1.6.0"
pytest-xdist = "^3.6.1"
pytest-randomly = "^3.15.0"
pytest-timeout = "^2.3.1"
pytest-flakefinder = "^1.1.0"
mypy = "^1.10.0"
blocklint = "^0.2.4"
doit = "^0.36.0"
ruff = "^0.4.0"
safety = "^3.2.1"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
